@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-25T01:00:49Z",
-  "count_outdated" : 849,
-  "uniques_outdated" : 499,
-  "count" : 872,
-  "uniques" : 513,
+  "timestamp" : "2023-09-25T08:18:04Z",
+  "count_outdated" : 850,
+  "uniques_outdated" : 500,
+  "count" : 874,
+  "uniques" : 515,
   "clones" : [
-    {
-      "timestamp": "2023-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
